--- a/03_folium/04_자료추출.ipynb
+++ b/03_folium/04_자료추출.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        " 'meta': {'is_end': True, 'pageable_count': 1, 'total_count': 1}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,27 +82,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'02-6002-1880'"
+       "'126.79600938096'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "jsondata['documents'][0]['phone']\n"
+    "jsondata['documents'][0]['address']['x']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -20596,7 +20596,7 @@
        "   'id': '예래동'}]}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20605,46 +20605,49 @@
     "with open('jeju.json') as f:\n",
     "    data =json.load(f)\n",
     "\n",
-    "data"
+    "data\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['type', 'features'])\n"
+      "<class 'dict'>\n"
      ]
     }
    ],
    "source": [
-    "print(data.keys())\n"
+    "print(type(data))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "type\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'FeatureCollection'"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(list(data.keys())[0])"
+    "data['type']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -40642,146 +40645,13 @@
        "  'id': '예래동'}]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "x=data['features']\n",
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': '삼양동', 'base_year': '2018', 'name_eng': 'Samyang-dong', 'code': '1109069'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '1121061'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '2101051'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '2404054'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '2501076'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '2601067'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3102262'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3107051'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3108053'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3109275'}\n",
-      "{'name': '송산동', 'base_year': '2018', 'name_eng': 'Songsan-dong', 'code': '3110459'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3111051'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3114051'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3119151'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3128052'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3202051'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3203052'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3303074'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3304151'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3401151'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3501174'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3502060'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3503051'}\n",
-      "{'name': '연동', 'base_year': '2018', 'name_eng': 'Yeon-dong', 'code': '3601053'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3602053'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3603062'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3701267'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3707052'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3710051'}\n",
-      "{'name': '안덕면', 'base_year': '2018', 'name_eng': 'Andeok-myeon', 'code': '3733035'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3803074'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3805053'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3810058'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3811252'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3811551'}\n",
-      "{'name': '한림읍', 'base_year': '2018', 'name_eng': 'Hallim-eup', 'code': '3901011'}\n",
-      "{'name': '애월읍', 'base_year': '2018', 'name_eng': 'Aewol-eup', 'code': '3901012'}\n",
-      "{'name': '구좌읍', 'base_year': '2018', 'name_eng': 'Gujwa-eup', 'code': '3901013'}\n",
-      "{'name': '조천읍', 'base_year': '2018', 'name_eng': 'Jocheon-eup', 'code': '3901014'}\n",
-      "{'name': '한경면', 'base_year': '2018', 'name_eng': 'Hangyeong-myeon', 'code': '3901031'}\n",
-      "{'name': '추자면', 'base_year': '2018', 'name_eng': 'Chuja-myeon', 'code': '3901032'}\n",
-      "{'name': '우도면', 'base_year': '2018', 'name_eng': 'Udo-myeon', 'code': '3901033'}\n",
-      "{'name': '일도1동', 'base_year': '2018', 'name_eng': 'Ildo 1(il)-dong', 'code': '3901051'}\n",
-      "{'name': '일도2동', 'base_year': '2018', 'name_eng': 'Ildo 2(i)-dong', 'code': '3901052'}\n",
-      "{'name': '이도1동', 'base_year': '2018', 'name_eng': 'Ido 1(il)-dong', 'code': '3901053'}\n",
-      "{'name': '이도2동', 'base_year': '2018', 'name_eng': 'Ido 2(i)-dong', 'code': '3901054'}\n",
-      "{'name': '삼도1동', 'base_year': '2018', 'name_eng': 'Samdo 1(il)-dong', 'code': '3901055'}\n",
-      "{'name': '삼도2동', 'base_year': '2018', 'name_eng': 'Samdo 2(i)-dong', 'code': '3901056'}\n",
-      "{'name': '용담1동', 'base_year': '2018', 'name_eng': 'Yongdam 1(il)-dong', 'code': '3901057'}\n",
-      "{'name': '용담2동', 'base_year': '2018', 'name_eng': 'Yongdam 2(i)-dong', 'code': '3901058'}\n",
-      "{'name': '건입동', 'base_year': '2018', 'name_eng': 'Geonip-dong', 'code': '3901059'}\n",
-      "{'name': '화북동', 'base_year': '2018', 'name_eng': 'Hwabuk-dong', 'code': '3901060'}\n",
-      "{'name': '삼양동', 'base_year': '2018', 'name_eng': 'Samyang-dong', 'code': '3901061'}\n",
-      "{'name': '봉개동', 'base_year': '2018', 'name_eng': 'Bonggae-dong', 'code': '3901062'}\n",
-      "{'name': '아라동', 'base_year': '2018', 'name_eng': 'Ara-dong', 'code': '3901063'}\n",
-      "{'name': '오라동', 'base_year': '2018', 'name_eng': 'Ora-dong', 'code': '3901064'}\n",
-      "{'name': '연동', 'base_year': '2018', 'name_eng': 'Yeon-dong', 'code': '3901065'}\n",
-      "{'name': '노형동', 'base_year': '2018', 'name_eng': 'Nohyeong-dong', 'code': '3901066'}\n",
-      "{'name': '외도동', 'base_year': '2018', 'name_eng': 'Oedo-dong', 'code': '3901067'}\n",
-      "{'name': '이호동', 'base_year': '2018', 'name_eng': 'Iho-dong', 'code': '3901068'}\n",
-      "{'name': '도두동', 'base_year': '2018', 'name_eng': 'Dodu-dong', 'code': '3901069'}\n",
-      "{'name': '대정읍', 'base_year': '2018', 'name_eng': 'Daejeong-eup', 'code': '3902011'}\n",
-      "{'name': '남원읍', 'base_year': '2018', 'name_eng': 'Namwon-eup', 'code': '3902012'}\n",
-      "{'name': '성산읍', 'base_year': '2018', 'name_eng': 'Seongsan-eup', 'code': '3902013'}\n",
-      "{'name': '안덕면', 'base_year': '2018', 'name_eng': 'Andeok-myeon', 'code': '3902031'}\n",
-      "{'name': '표선면', 'base_year': '2018', 'name_eng': 'Pyoseon-myeon', 'code': '3902032'}\n",
-      "{'name': '송산동', 'base_year': '2018', 'name_eng': 'Songsan-dong', 'code': '3902051'}\n",
-      "{'name': '정방동', 'base_year': '2018', 'name_eng': 'Jeongbang-dong', 'code': '3902052'}\n",
-      "{'name': '중앙동', 'base_year': '2018', 'name_eng': 'Jungang-dong', 'code': '3902053'}\n",
-      "{'name': '천지동', 'base_year': '2018', 'name_eng': 'Cheonji-dong', 'code': '3902054'}\n",
-      "{'name': '효돈동', 'base_year': '2018', 'name_eng': 'Hyodondong', 'code': '3902055'}\n",
-      "{'name': '영천동', 'base_year': '2018', 'name_eng': 'Yeongcheon-dong', 'code': '3902056'}\n",
-      "{'name': '동홍동', 'base_year': '2018', 'name_eng': 'Donghong-dong', 'code': '3902057'}\n",
-      "{'name': '서홍동', 'base_year': '2018', 'name_eng': 'Seohong-dong', 'code': '3902058'}\n",
-      "{'name': '대륜동', 'base_year': '2018', 'name_eng': 'Daeryundong', 'code': '3902059'}\n",
-      "{'name': '대천동', 'base_year': '2018', 'name_eng': 'Daecheon-dong', 'code': '3902060'}\n",
-      "{'name': '중문동', 'base_year': '2018', 'name_eng': 'Jungmun-dong', 'code': '3902061'}\n",
-      "{'name': '예래동', 'base_year': '2018', 'name_eng': 'Yeraedong', 'code': '3902062'}\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'name': '예래동',\n",
-       " 'base_year': '2018',\n",
-       " 'name_eng': 'Yeraedong',\n",
-       " 'code': '3902062'}"
-      ]
-     },
-     "execution_count": 67,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "for i in x:\n",
-    "    a_list =i['properties']\n",
-    "    print(a_list)\n",
-    "    \n",
-    "a_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "name 예래동\n",
-      "base_year 2018\n",
-      "name_eng Yeraedong\n",
-      "code 3902062\n"
-     ]
-    }
-   ],
-   "source": [
-    "for k,v in a_list.items():\n",
-    "    print(k,v)"
+    "data['features']"
    ]
   },
   {
